--- a/Examen/index.html
+++ b/Examen/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../Estilos/estilo_bienvenida.css">
     <link rel="stylesheet" href="estilos_examen.css">
-    <script src="script_examen.js" defer></script>
+    <script src="script2.js" defer></script>
 </head>
 
 <body>
@@ -30,7 +30,7 @@
 <div class="d-flex">
     <!-- Menú lateral -->
     <nav class="col-3 bg-light p-3 vh-100" id="sidebar">
-        <h5 class="text-primary text-center">Sección de Materias</h5>
+        <h5 class="text-primary text-center">Sección de materias.</h5>
         <div class="accordion" id="materiasAccordion">
             <!-- Reemplaza "Materia X" con los nombres de las materias -->
             <div class="accordion-item">
@@ -43,11 +43,12 @@
                     <div class="accordion-body">
                         <!-- Botones de preguntas -->
                         <div class="d-flex flex-wrap gap-2">
-                            <button class="btn btn-primary btn-sm">1</button>
-                            <button class="btn btn-primary btn-sm">2</button>
-                            <button class="btn btn-primary btn-sm">3</button>
-                            <button class="btn btn-primary btn-sm">4</button>
-                            <button class="btn btn-primary btn-sm">5</button>
+                            <button class="btn btn-primary btn-sm" data-materia="RazonamientoVerbal" data-pregunta="1">1</button>
+                            <button class="btn btn-primary btn-sm" data-materia="RazonamientoVerbal" data-pregunta="2">2</button>
+                            <button class="btn btn-primary btn-sm" data-materia="RazonamientoVerbal" data-pregunta="3">3</button>
+                            <button class="btn btn-primary btn-sm" data-materia="RazonamientoVerbal" data-pregunta="4">4</button>
+                            <button class="btn btn-primary btn-sm" data-materia="RazonamientoVerbal" data-pregunta="5">5</button>
+
                             <!-- Agrega más botones según sea necesario -->
                         </div>
                     </div>
@@ -60,15 +61,16 @@
                         Razonamiento matematico
                     </button>
                 </h2>
-                <div id="materia1" class="accordion-collapse collapse" data-bs-parent="#materiasAccordion">
+                <div id="materia2" class="accordion-collapse collapse" data-bs-parent="#materiasAccordion">
                     <div class="accordion-body">
                         <!-- Botones de preguntas -->
                         <div class="d-flex flex-wrap gap-2">
-                            <button class="btn btn-primary btn-sm">1</button>
-                            <button class="btn btn-primary btn-sm">2</button>
-                            <button class="btn btn-primary btn-sm">3</button>
-                            <button class="btn btn-primary btn-sm">4</button>
-                            <button class="btn btn-primary btn-sm">5</button>
+                            <button class="btn btn-primary btn-sm" data-materia="RazonamientoMatematico" data-pregunta="1">1</button>
+                            <button class="btn btn-primary btn-sm" data-materia="RazonamientoMatematico" data-pregunta="2">2</button>
+                            <button class="btn btn-primary btn-sm" data-materia="RazonamientoMatematico" data-pregunta="3">3</button>
+                            <button class="btn btn-primary btn-sm" data-materia="RazonamientoMatematico" data-pregunta="4">4</button>
+                            <button class="btn btn-primary btn-sm" data-materia="RazonamientoMatematico" data-pregunta="5">5</button>
+
                             <!-- Agrega más botones según sea necesario -->
                         </div>
                     </div>
@@ -81,15 +83,16 @@
                         Español
                     </button>
                 </h2>
-                <div id="materia1" class="accordion-collapse collapse" data-bs-parent="#materiasAccordion">
+                <div id="materia3" class="accordion-collapse collapse" data-bs-parent="#materiasAccordion">
                     <div class="accordion-body">
                         <!-- Botones de preguntas -->
                         <div class="d-flex flex-wrap gap-2">
-                            <button class="btn btn-primary btn-sm">1</button>
-                            <button class="btn btn-primary btn-sm">2</button>
-                            <button class="btn btn-primary btn-sm">3</button>
-                            <button class="btn btn-primary btn-sm">4</button>
-                            <button class="btn btn-primary btn-sm">5</button>
+                            <button class="btn btn-primary btn-sm" data-materia="Español" data-pregunta="1">1</button>
+                            <button class="btn btn-primary btn-sm" data-materia="Español" data-pregunta="2">2</button>
+                            <button class="btn btn-primary btn-sm" data-materia="Español" data-pregunta="3">3</button>
+                            <button class="btn btn-primary btn-sm" data-materia="Español" data-pregunta="4">4</button>
+                            <button class="btn btn-primary btn-sm" data-materia="Español" data-pregunta="5">5</button>
+
                             <!-- Agrega más botones según sea necesario -->
                         </div>
                     </div>
@@ -102,15 +105,16 @@
                         Matematicas
                     </button>
                 </h2>
-                <div id="materia1" class="accordion-collapse collapse" data-bs-parent="#materiasAccordion">
+                <div id="materia4" class="accordion-collapse collapse" data-bs-parent="#materiasAccordion">
                     <div class="accordion-body">
                         <!-- Botones de preguntas -->
                         <div class="d-flex flex-wrap gap-2">
-                            <button class="btn btn-primary btn-sm">1</button>
-                            <button class="btn btn-primary btn-sm">2</button>
-                            <button class="btn btn-primary btn-sm">3</button>
-                            <button class="btn btn-primary btn-sm">4</button>
-                            <button class="btn btn-primary btn-sm">5</button>
+                            <button class="btn btn-primary btn-sm" data-materia="matematicas" data-pregunta="1">1</button>
+                            <button class="btn btn-primary btn-sm" data-materia="matematicas" data-pregunta="2">2</button>
+                            <button class="btn btn-primary btn-sm" data-materia="matematicas" data-pregunta="3">3</button>
+                            <button class="btn btn-primary btn-sm" data-materia="matematicas" data-pregunta="4">4</button>
+                            <button class="btn btn-primary btn-sm" data-materia="matematicas" data-pregunta="5">5</button>
+
                             <!-- Agrega más botones según sea necesario -->
                         </div>
                     </div>
@@ -123,15 +127,16 @@
                         Biologia
                     </button>
                 </h2>
-                <div id="materia1" class="accordion-collapse collapse" data-bs-parent="#materiasAccordion">
+                <div id="materia5" class="accordion-collapse collapse" data-bs-parent="#materiasAccordion">
                     <div class="accordion-body">
                         <!-- Botones de preguntas -->
                         <div class="d-flex flex-wrap gap-2">
-                            <button class="btn btn-primary btn-sm">1</button>
-                            <button class="btn btn-primary btn-sm">2</button>
-                            <button class="btn btn-primary btn-sm">3</button>
-                            <button class="btn btn-primary btn-sm">4</button>
-                            <button class="btn btn-primary btn-sm">5</button>
+                            <button class="btn btn-primary btn-sm" data-materia="Biologia" data-pregunta="1">1</button>
+                            <button class="btn btn-primary btn-sm" data-materia="Biologia" data-pregunta="2">2</button>
+                            <button class="btn btn-primary btn-sm" data-materia="Biologia" data-pregunta="3">3</button>
+                            <button class="btn btn-primary btn-sm" data-materia="Biologia" data-pregunta="4">4</button>
+                            <button class="btn btn-primary btn-sm" data-materia="Biologia" data-pregunta="5">5</button>
+
                             <!-- Agrega más botones según sea necesario -->
                         </div>
                     </div>
@@ -144,15 +149,17 @@
                         Fisica
                     </button>
                 </h2>
-                <div id="materia1" class="accordion-collapse collapse" data-bs-parent="#materiasAccordion">
+                <div id="materia6" class="accordion-collapse collapse" data-bs-parent="#materiasAccordion">
                     <div class="accordion-body">
                         <!-- Botones de preguntas -->
                         <div class="d-flex flex-wrap gap-2">
-                            <button class="btn btn-primary btn-sm">1</button>
-                            <button class="btn btn-primary btn-sm">2</button>
-                            <button class="btn btn-primary btn-sm">3</button>
-                            <button class="btn btn-primary btn-sm">4</button>
-                            <button class="btn btn-primary btn-sm">5</button>
+                            <button class="btn btn-primary btn-sm" data-materia="Fisica" data-pregunta="1">1</button>
+                            <button class="btn btn-primary btn-sm" data-materia="Fisica" data-pregunta="2">2</button>
+                            <button class="btn btn-primary btn-sm" data-materia="Fisica" data-pregunta="3">3</button>
+                            <button class="btn btn-primary btn-sm" data-materia="Fisica" data-pregunta="4">4</button>
+                            <button class="btn btn-primary btn-sm" data-materia="Fisica" data-pregunta="5">5</button>
+
+
                             <!-- Agrega más botones según sea necesario -->
                         </div>
                     </div>
@@ -165,15 +172,16 @@
                         Quimica
                     </button>
                 </h2>
-                <div id="materia1" class="accordion-collapse collapse" data-bs-parent="#materiasAccordion">
+                <div id="materia7" class="accordion-collapse collapse" data-bs-parent="#materiasAccordion">
                     <div class="accordion-body">
                         <!-- Botones de preguntas -->
                         <div class="d-flex flex-wrap gap-2">
-                            <button class="btn btn-primary btn-sm">1</button>
-                            <button class="btn btn-primary btn-sm">2</button>
-                            <button class="btn btn-primary btn-sm">3</button>
-                            <button class="btn btn-primary btn-sm">4</button>
-                            <button class="btn btn-primary btn-sm">5</button>
+                            <button class="btn btn-primary btn-sm" data-materia="Quimica" data-pregunta="1">1</button>
+                            <button class="btn btn-primary btn-sm" data-materia="Quimica" data-pregunta="2">2</button>
+                            <button class="btn btn-primary btn-sm" data-materia="Quimica" data-pregunta="3">3</button>
+                            <button class="btn btn-primary btn-sm" data-materia="Quimica" data-pregunta="4">4</button>
+                            <button class="btn btn-primary btn-sm" data-materia="Quimica" data-pregunta="5">5</button>
+
                             <!-- Agrega más botones según sea necesario -->
                         </div>
                     </div>
@@ -186,15 +194,16 @@
                         Historia
                     </button>
                 </h2>
-                <div id="materia1" class="accordion-collapse collapse" data-bs-parent="#materiasAccordion">
+                <div id="materia8" class="accordion-collapse collapse" data-bs-parent="#materiasAccordion">
                     <div class="accordion-body">
                         <!-- Botones de preguntas -->
                         <div class="d-flex flex-wrap gap-2">
-                            <button class="btn btn-primary btn-sm">1</button>
-                            <button class="btn btn-primary btn-sm">2</button>
-                            <button class="btn btn-primary btn-sm">3</button>
-                            <button class="btn btn-primary btn-sm">4</button>
-                            <button class="btn btn-primary btn-sm">5</button>
+                            <button class="btn btn-primary btn-sm" data-materia="Historia" data-pregunta="1">1</button>
+                            <button class="btn btn-primary btn-sm" data-materia="Historia" data-pregunta="2">2</button>
+                            <button class="btn btn-primary btn-sm" data-materia="Historia" data-pregunta="3">3</button>
+                            <button class="btn btn-primary btn-sm" data-materia="Historia" data-pregunta="4">4</button>
+                            <button class="btn btn-primary btn-sm" data-materia="Historia" data-pregunta="5">5</button>
+
                             <!-- Agrega más botones según sea necesario -->
                         </div>
                     </div>
@@ -207,15 +216,16 @@
                         Geografia
                     </button>
                 </h2>
-                <div id="materia1" class="accordion-collapse collapse" data-bs-parent="#materiasAccordion">
+                <div id="materia9" class="accordion-collapse collapse" data-bs-parent="#materiasAccordion">
                     <div class="accordion-body">
                         <!-- Botones de preguntas -->
                         <div class="d-flex flex-wrap gap-2">
-                            <button class="btn btn-primary btn-sm">1</button>
-                            <button class="btn btn-primary btn-sm">2</button>
-                            <button class="btn btn-primary btn-sm">3</button>
-                            <button class="btn btn-primary btn-sm">4</button>
-                            <button class="btn btn-primary btn-sm">5</button>
+                            <button class="btn btn-primary btn-sm" data-materia="Geografia" data-pregunta="1">1</button>
+                            <button class="btn btn-primary btn-sm" data-materia="Geografia" data-pregunta="2">2</button>
+                            <button class="btn btn-primary btn-sm" data-materia="Geografia" data-pregunta="3">3</button>
+                            <button class="btn btn-primary btn-sm" data-materia="Geografia" data-pregunta="4">4</button>
+                            <button class="btn btn-primary btn-sm" data-materia="Geografia" data-pregunta="5">5</button>
+
                             <!-- Agrega más botones según sea necesario -->
                         </div>
                     </div>
@@ -228,15 +238,16 @@
                         Formacion civica y etica.
                     </button>
                 </h2>
-                <div id="materia1" class="accordion-collapse collapse" data-bs-parent="#materiasAccordion">
+                <div id="materia10" class="accordion-collapse collapse" data-bs-parent="#materiasAccordion">
                     <div class="accordion-body">
                         <!-- Botones de preguntas -->
                         <div class="d-flex flex-wrap gap-2">
-                            <button class="btn btn-primary btn-sm">1</button>
-                            <button class="btn btn-primary btn-sm">2</button>
-                            <button class="btn btn-primary btn-sm">3</button>
-                            <button class="btn btn-primary btn-sm">4</button>
-                            <button class="btn btn-primary btn-sm">5</button>
+                            <button class="btn btn-primary btn-sm" data-materia="FCyE" data-pregunta="1">1</button>
+                            <button class="btn btn-primary btn-sm" data-materia="FCyE" data-pregunta="2">2</button>
+                            <button class="btn btn-primary btn-sm" data-materia="FCyE" data-pregunta="3">3</button>
+                            <button class="btn btn-primary btn-sm" data-materia="FCyE" data-pregunta="4">4</button>
+                            <button class="btn btn-primary btn-sm" data-materia="FCyE" data-pregunta="5">5</button>
+
                             <!-- Agrega más botones según sea necesario -->
                         </div>
                     </div>
@@ -249,8 +260,13 @@
     <!-- Contenedor principal -->
     <div class="col-9 p-4" id="contenedor-examen">
 
-        <div class="text-end mb-3">
-            <span id="cronometro" class="fw-bold text-danger" style="font-size: 1.2rem;">03:00:00</span>
+        <div class="d-flex justify-content-between align-items-center mb-3">
+            <span id="indice" class="fw-bold text-primary" style="font-size: 1rem;">
+                Examen simulacro 1 >> Materia: N/A >> Pregunta: N/A
+            </span>
+            <span id="cronometro" class="fw-bold text-danger" style="font-size: 1.2rem;">
+                03:00:00
+            </span>
         </div>
 
         <div class="border rounded p-3 mb-3" id="pregunta-contenedor">
@@ -275,7 +291,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 <script>
-    // Si necesitas más lógica personalizada, agrégala aquí.
+
 </script>
 </body>
 
