--- a/Pantallas/Registro_Usuario.html
+++ b/Pantallas/Registro_Usuario.html
@@ -7,14 +7,14 @@
    
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@1,700&display=swap" rel="stylesheet">
    
-    <link rel="stylesheet" href="/Estilos/estilo_registro_usuario.css">
+    <link rel="stylesheet" href="../Estilos/estilo_registro_usuario.css">
 </head>
 
 <body>
    
 <header class="header">
     <div class="logo">
-        <img src="/Recursos/logo.png" alt="Logo del Programa">
+        <img src="../Recursos/logo.png" alt="Logo del Programa">
     </div>
     <div class="divider"></div>
     <nav class="nav-buttons">
@@ -27,7 +27,7 @@
 
 <div class="container">
     <div class="imagen-plataforma">
-        <img src="/Recursos/registro_usuario.png" alt="Imagen descriptiva" />
+        <img src="../Recursos/registro_usuario.png" alt="Imagen descriptiva" />
     </div>
 
     <div class="Rectangle">
