Cambios en el examen

--- a/Examen/index.html
+++ b/Examen/index.html
@@ -262,7 +262,7 @@
 
         <div class="d-flex justify-content-between align-items-center mb-3">
             <span id="indice" class="fw-bold text-primary" style="font-size: 1rem;">
-                Examen simulacro 1 >> Materia: N/A >> Pregunta: N/A
+                Examen simulacro 1 > Materia: N/A > Pregunta: N/A
             </span>
             <span id="cronometro" class="fw-bold text-danger" style="font-size: 1.2rem;">
                 03:00:00
