Retroalimentacion funcionando falta ponerlo bonito xd

--- a/Pantallas/InicioLoggeado.html
+++ b/Pantallas/InicioLoggeado.html
@@ -6,14 +6,14 @@
     <title>PrepárateCOMIPEMS</title>
    
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@1,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="/Estilos/estilo_bienvenida.css">
-    <link rel="stylesheet" href="/Estilos/estilo_inicioLoggeado.css">
+    <link rel="stylesheet" href="../Estilos/estilo_bienvenida.css">
+    <link rel="stylesheet" href="../Estilos/estilo_inicioLoggeado.css">
 </head>
 
 <body>
     <header class="header">
         <div class="logo">
-            <img src="/Recursos/logo.png" alt="Logo del Programa">
+            <img src="../Recursos/logo.png" alt="Logo del Programa">
         </div>
         <div class="divider"></div>
         <nav class="nav-buttons">
@@ -57,11 +57,11 @@
                     <span class="Nombre">Español</span>
                 </div>
                 <div class="NombreMateria">
-                    <img src="/Recursos/matematicas.png" alt="Mate" class="icono-materia">
+                    <img src="../Recursos/matematicas.png" alt="Mate" class="icono-materia">
                     <span class="Nombre">Matematicas</span>
                 </div>
                 <div class="NombreMateria">
-                    <img src="/Recursos/biologia.png" alt="Bio" class="icono-materia">
+                    <img src="../Recursos/biologia.png" alt="Bio" class="icono-materia">
                     <span class="Nombre">Biologia</span>
                 </div>
             </div>
