--- a/Examen/index.html
+++ b/Examen/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PrepárateCOMIPEMS</title>
    
-    <link href="/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../Estilos/estilo_bienvenida.css">
     <link rel="stylesheet" href="estilos_examen.css">
-    <script src="script2.js" defer></script>
+    <script src="script.js" defer></script>
 </head>
 
 <body>
@@ -22,7 +22,7 @@
         <a href="#" class="nav-button">Guía digital</a>
         <a href="#" class="nav-button">Exámenes simulacro</a>
         <a href="#" class="nav-button">Información sobre COMIPEMS</a>
-        <a href="Pantallas/Iniciar_Sesion.php" class="nav-button">Iniciar sesión</a>
+        <a href="../Pantallas/Iniciar_Sesion.php" class="nav-button">Iniciar sesión</a>
     </nav>
     
 </header>
@@ -278,18 +278,18 @@
                 <label><input type="radio" name="respuesta" value="B"> B</label><br>
                 <label><input type="radio" name="respuesta" value="C"> C</label><br>
                 <label><input type="radio" name="respuesta" value="D"> D</label><br>
-                <label><input type="radio" name="respuesta" value="E"> E</label><br>
             </form>
         </div>
 
         <div class="d-flex justify-content-between mt-3">
             <button id="btn-anterior" class="btn btn-secondary" style="display: none;">Anterior</button>
             <button id="btn-siguiente" class="btn btn-primary">Siguiente</button>
+
         </div>
     </div>
 </div>
 
-<script src="/node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
+<script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
 <script>
 
 </script>
